# rninja

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  specs.md
.github/homebrew-formula/: rninja.rb
.github/npm-package/: package.json
.github/pypi-package/: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: cache_benchmark.sh  generate_project.sh  remote_cache_benchmark.sh  results.json  run_benchmark.sh
docs/: architecture.md  dropin.md  market.md  operations-manual.md  performance.md  remote-cache-deployment.md  roadmap.md  rolling-restart.md  sensitivities.md
documentation/: mkdocs.yml  requirements.txt
documentation/docs/: changelog.md  index.md  tags.md
documentation/docs/architecture/: data-flow.md  drop-in-guarantees.md  network-protocol.md  overview.md
documentation/docs/caching/: cache-modes.md  overview.md  troubleshooting.md
documentation/docs/ci-cd/: best-practices.md  docker.md  jenkins.md  kubernetes.md
documentation/docs/contributing/: code-style.md  development-setup.md  guide.md  roadmap.md  testing.md
documentation/docs/daemon/: auto-spawn.md  management.md  multi-repo.md  overview.md  single-shot.md
documentation/docs/getting-started/: first-build.md  installation.md  migration.md  overview.md  quick-start.md
documentation/docs/includes/: abbreviations.md
documentation/docs/javascripts/: extra.js
documentation/docs/operations/: overview.md
documentation/docs/overrides/: main.html
documentation/docs/performance/: benchmarks.md  estimating-benefits.md  optimization.md  overview.md  profiling.md
documentation/docs/reference/: cli-options.md  compatibility.md  configuration.md  environment-variables.md  exit-codes.md  file-formats.md
documentation/docs/stylesheets/: extra.css
documentation/docs/troubleshooting/: common-issues.md  debug-mode.md  diagnostics.md  faq.md
documentation/docs/user-guide/: basic-usage.md  (+1 more)
scripts/: compat_test.sh  fuzzy_compat_test.sh  gen_bench.py  run_benchmark.sh
snap/: snapcraft.yaml
src/: buildlog.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  output.rs  trace.rs
src/admin/: cache_gc.rs  cache_health.rs  cache_stats.rs  mod.rs
src/cache/: blob.rs  config.rs  entry.rs  hasher.rs  mod.rs  schema.rs
src/client/: connection.rs  mod.rs
src/daemon/: mod.rs  protocol.rs  server.rs  session.rs  state.rs  watcher.rs
src/executor/: depfile.rs  mod.rs  runner.rs
src/graph/: mod.rs  node.rs
src/metrics/: mod.rs  prometheus.rs
src/parser/: lexer.rs  manifest.rs  mod.rs
src/server/: auth.rs  config.rs  handler.rs  mod.rs
tests/: run_all_tests.sh
tests/generators/: cmake_test.ps1  cmake_test.sh  gn_test.sh  meson_test.sh  run_all.sh
tests/integration/: network_test.sh  run_all.sh  serialization_test.sh  stress_test.sh
(+44 files in other folders)
