[package]
name = "rninja"
version = "0.1.0"
edition = "2021"
description = "A drop-in replacement for Ninja with caching and improved scheduling"
license = "MIT"
repository = "https://github.com/user/rninja"
keywords = ["build", "ninja", "cache", "compiler"]
categories = ["development-tools::build-utils"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization (cache scaffolding - Phase 1)
sled = "0.34"
rkyv = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Utilities
thiserror = "2"
anyhow = "1"
memmap2 = "0.9"
blake3 = "1"
parking_lot = "0.12"
dashmap = "6"
num_cpus = "1"
rayon = "1"

# Config and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs-next = "2"

# Terminal output
console = "0.15"
atty = "0.2"

# Remote cache transport (Phase 2)
nng = "1.0"
rmp-serde = "1"

# Rate limiting and backpressure
governor = "0.6"

# Client identification
hostname = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File watching (daemon)
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Binary path lookup
which = "7"

# Unix signals (daemon)
libc = "0.2"

# Signal handling
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "rninja"
path = "src/main.rs"

[[bin]]
name = "rninja-cached"
path = "src/bin/rninja-cached.rs"

[[bin]]
name = "rninja-daemon"
path = "src/bin/rninja-daemon.rs"
